# hwdesk

./: .gitignore  README.md  pyproject.toml  requirements.txt  taskfile.yml
cv2-stubs/: __init__.pyi
hwdesk/: __main__.py  constants.py  gui.py  logger.py  window.py
hwdesk/actions/: actions.py
hwdesk/camera/: base.py  camera.py  ms2109.py  ms2130.py  prompt.py
hwdesk/controls/: base.py  ch9329.py  controls.py  key_map.py  prompt.py
