[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hwdesk"
requires-python = ">=3.11"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/hwdesk"
Issues = "https://github.com/sandbox-pokhara/hwdesk/issues"

[project.gui-scripts]
hwdesk = "hwdesk.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "hwdesk.__version__" }
dependencies = { file = "requirements.txt" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"hwdesk" = "hwdesk"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
include = ["hwdesk", "test.py"]
